--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
         <img class="cabecalho-imagem" src="./img/logo.png" alt="Logo do site">
         <ul class="cabecalho-lista-item">
             <li class="cabecalho-lista-item">Apresentação</li>
-            <li class="cabecalho-lista-item">Materiais</li> 
-               </u1>
-    </h1>
-</header>
+            <li class="cabecalho-lista-item">Materiais</li>
+        </ul>
+    </header>
 </body>
-</html> 
+
+</html>
+</header>
+<section>
+</section>
+<section class=”escola”>
+    <h2 class=”escola-titulo”></h2>
+    <p class=”escola-texto-um”></p>
+    <p class=”escola-texto-dois”>a escola SD é um colégio para meninas,foi fundada em 2007 com o objetivo de preservar nossos futuros e também dar várias aulas de etiquetas etc.</p>
+    </section>
+</body
