--- a/index.html
+++ b/index.html
@@ -19,15 +19,22 @@
 </body>
 
 <section class="escola">
-    <h2 class="escola-titulo"></h2>
-    <p class="escola-texto-um">SOBRE A ESCOLA</p>
-    <p class="escola-texto-dois">a escola SD é um colégio para meninas, que foi fundada em 2007 com o objetivo de preservar
-        nossos futuros e também dar várias aulas de etiquetas costuras,aulas de danças etc, turma mais famosa é a Segunda Série c. Uma turma
-        diversas e engajada, as vezes, um pouco bagunceira, mas
-        que entrega excelentes resultados!</p>
-        
-    <img src="./img/Formula-bro.png" alt="professora no quadro">
+    <div class="escola-conteudo">
+
+        <h2 class="escola-titulo">sobre a escola</h2>
+        <p class="escola-texto-um"></p>
+        <p class="escola-texto-dois">a escola SD é um colégio para meninas, que foi fundada em 2007 com o objetivo de
+            preservar
+            nossos futuros e também dar várias aulas de etiquetas costuras,aulas de danças etc, turma mais famosa é a
+            Segunda Série c. Uma turma
+            diversas e engajada, as vezes, um pouco bagunceira,mas
+            que entrega excelentes resultados!</p>
+
+    </div>
+
+    <img class="escola-imagem" src="./img/jj.png" alt="Logo do site">
 </section>
+
 </body>
 
 </html>
